--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'com.google.android.gms:play-services-maps:11.6.2'
 }
